<resources>
    <string name="app_name">Agenda de Contatos</string>

    <string name="title_activity_splashscreen">SplashscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="novo_contato">Novo Contato</string>
    <string name="detalhes_contato">Detalhes do Contato</string>
    <string name="contato">Contato</string>
    <string name="lista_contatos">Lista de Contatos</string>
    <string name="form_nome">Nome</string>
    <string name="form_telefone">Telefone</string>
    <string name="data_de_nascimento">Data de Nascimento</string>
    <string name="cep">CEP</string>
    <string name="buscar">Buscar</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>
    <string name="bairro">Bairro</string>
    <string name="rua">Rua</string>
    <string name="numero_casa">Número</string>
</resources>
